--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container-fluid">
        <a href="index.html"><img class="logo-img" src="img/cafelogo.jpeg" alt="Logo"  width="50" height="50"></a> 
         <div class="navbar">
-          <span href="#" class="btn btn-outline-dark">Episódios</span>
+          <a href="episodios.html"><span class="btn btn-outline-dark">Episódios</span></a>
         </div>
       </div>
     </nav>
@@ -27,6 +27,25 @@
     </header>
     <main>
       <h2 class="text-center">Bem vindo ao podcast mas cafezado que existe</h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-3"></div>
+          <div class="col-sm-6 text-center">
+            <button type="button" class="btn btn-success" data-bs-toggle="collapse" data-bs-target="#redes" aria-expanded="false">Nossas Redes</button>
+            <div class="collapse" id="redes">
+              <div class="card card-body">
+                <div class="d-grid gap-2">
+                  <button type="button" class="btn btn-success">Instagram <img src="img/instag.png" alt="instagram" width="30" height="30"></button>
+                  <button type="button" class="btn btn-success">Youtube <img src="img/youtube.png" alt="instagram" width="30" height="30"></button>
+                  <button type="button" class="btn btn-success">Spotify <img src="img/spotify.png" alt="instagram" width="30" height="30"></button>
+                </div>
+              </div> 
+            </div>
+          </div>
+        <div class="col-sm-3"></div>
+        </div>
+      </div>
+      <br/>
       <!--cards-->
       <div class="container">
         <div class="row">
