modification in index.html and episodios.html
add new img on img folder

--- a/episodios.html
+++ b/episodios.html
@@ -25,7 +25,104 @@
     </nav>
     </header>
     <main>
-
+      <h2 class="text-center">Confira nossos episódios</h2>
+      <div class="album py-5 bg-body-tertiary">
+        <div class="container">     
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            <div class="col">
+              <div class="card">
+                <img src="img/thumb/Thumnail 01 - Café com Café.jpg" class="card-img-top"  height="300">
+                <div class="card-body">
+                    <h5 class="card-title">Episodio 1 - Café com Café</h5>
+                    <p class="card-text">Coruja, Nega e Dom Ck trazendo kilos de desinformação sobre café</p>
+                    <a href="#" class="btn btn-success">Confira aqui</a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col">
+              <div class="card h-100">
+                <img src="img/thumb/Thumnail 02 - Café com Almoço.jpg" class="card-img-top"  height="300">
+                <div class="card-body">
+                    <h5 class="card-title">Episodio 2 - Café com Almoço</h5>
+                    <p class="card-text">Já PoDe AlMoSsAr? Kilos de desiformação sobre a maior refeição do dia</p>
+                    <a href="#" class="btn btn-success">Confira aqui</a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col">
+              <div class="card h-100">
+                <img src="img/thumb/Thumnail 03 - Café com Salário Mínimo.jpg" class="card-img-top"  height="300">
+                <div class="card-body">
+                    <h5 class="card-title">Episodio 3 - Café com salário mínimo</h5>
+                    <p class="card-text">Vem ver porque o Dom CK vai resolver o problema do salário mínimo no Brasil</p>
+                    <a href="#" class="btn btn-success">Confira aqui</a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col">
+              <div class="card h-100">
+                <img src="img/thumb/Thumnail 04 - Café com Soneca.jpg" class="card-img-top"  height="300">
+                <div class="card-body">
+                    <h5 class="card-title">Episodio 4 - Café com Soneca</h5>
+                    <p class="card-text">O Ministério do Sono adverte: Nenhum soninho foi tirado durante esse EP</p>
+                    <a href="#" class="btn btn-success">Confira aqui</a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col">
+              <div class="card h-100">
+                <img src="img/thumb/Thumnail 05 - Café com Frio.jpg" class="card-img-top"  height="300">
+                <div class="card-body">
+                    <h5 class="card-title">Episodio 5 - Café com Frio</h5>
+                    <p class="card-text">Crítica social sobre a melhor estação do ano por especialistas em meteorologia</p>
+                    <a href="#" class="btn btn-success">Confira aqui</a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col">
+              <div class="card h-100">
+                <img src="img/thumb/Thumnail 06 - Café com Vida Adulta.jpg" class="card-img-top"  height="300">
+                <div class="card-body">
+                    <h5 class="card-title">Episodio 6 - Café com Vida Adulta</h5>
+                    <p class="card-text">Um papo sobre seu adulto interior por filósofos quânticos ornamentais</p>
+                    <a href="#" class="btn btn-success">Confira aqui</a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col">
+              <div class="card h-100">
+                <img src="img/thumb/Thumnail 07 - Café com Memória.jpg" class="card-img-top"  height="300">
+                <div class="card-body">
+                    <h5 class="card-title">Episodio 7 - Café com Memória</h5>
+                    <p class="card-text">As vezes a gente lembra que precisa postar o episódio novo, as vezes esquecemos. Eu por exemplo esqueci de tirar a roupa do varal dinovo...</p>
+                    <a href="#" class="btn btn-success">Confira aqui</a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col">
+              <div class="card h-100">
+                <img src="img/thumb/Thumnail 08 - Café com Casa.jpg" class="card-img-top"  height="300">
+                <div class="card-body">
+                    <h5 class="card-title">Episodio 8 - Café com Casa</h5>
+                    <p class="card-text">Cadê a policia do aluguel???? Vem conferir com Coruja e Nega</p>
+                    <br/>
+                    <a href="#" class="btn btn-success">Confira aqui</a>
+                </div>
+              </div>
+            </div>
+  
+          </div>
+        </div>
+        <br/>
+      </div>
+      
     </main>
     <footer  class="footer mt-auto py-4 bg-success fixed-bottom">
         <div class="text-center">
