--- a/index.html
+++ b/index.html
@@ -51,34 +51,49 @@
         <div class="row">
 
           <div class="col-sm-4">
-            <div class="card">
-              <img src="img/cafelogo.jpeg" class="card-img-top"  height="300">
+            <div class="card h-100">
+              <img src="img/thumb/Thumnail 08 - Café com Casa.jpg" class="card-img-top"  height="300">
               <div class="card-body">
-                  <h5 class="card-title">Episodio tal </h5>
-                  <p class="card-text">textinho sobre o episodio</p>
-                  <a href="#" class="btn btn-success">link da pagina do episodio</a>
+                  <h5 class="card-title">Episódio 8 - Café com Casa</h5>
+                  <p class="card-text">Cadê a policia do aluguel???? Vem conferir com Coruja e Nega</p>
+                  <a href="#" class="btn btn-success">Confira aqui 
+                    <span class="position-absolute top-0 start-50 translate-middle badge rounded-pill bg-danger">
+                    NOVO
+                    <span class="visually-hidden">unread messages</span>
+                  </span>
+                </a>
               </div>
             </div>
           </div>
         
           <div class="col-sm-4">
-            <div class="card">
-              <img src="img/cafelogo.jpeg" class="card-img-top"  height="300">
+            <div class="card h-100">
+              <img src="img/thumb/Thumnail 03 - Café com Salário Mínimo.jpg" class="card-img-top"  height="300">
               <div class="card-body">
-                  <h5 class="card-title">Episodio tal </h5>
-                  <p class="card-text">textinho sobre o episodio</p>
-                  <a href="#" class="btn btn-success">link da pagina do episodio</a>
+                  <h5 class="card-title">Episodio 3 - Café com salário mínimo</h5>
+                  <p class="card-text">Vem ver porque o Dom CK vai resolver o problema do salário mínimo no Brasil</p>
+                  <a href="#" class="btn btn-success">Confira aqui
+                    <span class="position-absolute top-0  start-50  translate-middle badge rounded-pill bg-warning">
+                      RECOMENDADO
+                      <span class="visually-hidden">unread messages</span>
+                    </span>
+                  </a>
               </div>
             </div>
           </div>
 
           <div class="col-sm-4">
-            <div class="card">
-              <img src="img/cafelogo.jpeg" class="card-img-top"  height="300">
+            <div class="card h-100">
+              <img src="img/thumb/Thumnail 01 - Café com Café.jpg" class="card-img-top"  height="300">
               <div class="card-body">
-                  <h5 class="card-title">Episodio tal </h5>
-                  <p class="card-text">textinho sobre o episodio</p>
-                  <a href="#" class="btn btn-success">link da pagina do episodio</a>
+                  <h5 class="card-title">Episódio 1 - Café com Café</h5>
+                  <p class="card-text">Coruja, Nega e Dom Ck trazendo kilos de desinformação sobre café</p>
+                  <a href="#" class="btn btn-success">Confira aqui
+                    <span class="position-absolute top-0 start-50 translate-middle badge rounded-pill bg-info">
+                      MAIS OUVIDO
+                      <span class="visually-hidden">unread messages</span>
+                    </span>
+                  </a>
               </div>
             </div>
           </div>
