--- a/episodios.html
+++ b/episodios.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Café com...</title>
+    <title>Episódios</title>
+    <link rel="shortcut icon" type="imagex/png" href="img/icon_cafelogo.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   
     <style>
@@ -31,89 +32,89 @@
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
               <div class="card">
-                <img src="img/thumb/Thumnail 01 - Café com Café.jpg" class="card-img-top"  height="300">
+                <img src="img/thumb/Thumnail 01 - Café com Café.jpg" class="card-img-top"  height="400">
                 <div class="card-body">
                     <h5 class="card-title">Episodio 1 - Café com Café</h5>
                     <p class="card-text">Coruja, Nega e Dom Ck trazendo kilos de desinformação sobre café</p>
-                    <a href="#" class="btn btn-success">Confira aqui</a>
+                    <a href="ep01.html" class="btn btn-success">Confira aqui</a>
                 </div>
               </div>
             </div>
   
             <div class="col">
               <div class="card h-100">
-                <img src="img/thumb/Thumnail 02 - Café com Almoço.jpg" class="card-img-top"  height="300">
+                <img src="img/thumb/Thumnail 02 - Café com Almoço.jpg" class="card-img-top"  height="400">
                 <div class="card-body">
                     <h5 class="card-title">Episodio 2 - Café com Almoço</h5>
                     <p class="card-text">Já PoDe AlMoSsAr? Kilos de desiformação sobre a maior refeição do dia</p>
-                    <a href="#" class="btn btn-success">Confira aqui</a>
+                    <a href="ep02.html" class="btn btn-success">Confira aqui</a>
                 </div>
               </div>
             </div>
   
             <div class="col">
               <div class="card h-100">
-                <img src="img/thumb/Thumnail 03 - Café com Salário Mínimo.jpg" class="card-img-top"  height="300">
+                <img src="img/thumb/Thumnail 03 - Café com Salário Mínimo.jpg" class="card-img-top"  height="400">
                 <div class="card-body">
                     <h5 class="card-title">Episodio 3 - Café com salário mínimo</h5>
                     <p class="card-text">Vem ver porque o Dom CK vai resolver o problema do salário mínimo no Brasil</p>
-                    <a href="#" class="btn btn-success">Confira aqui</a>
+                    <a href="ep03.html" class="btn btn-success">Confira aqui</a>
                 </div>
               </div>
             </div>
   
             <div class="col">
               <div class="card h-100">
-                <img src="img/thumb/Thumnail 04 - Café com Soneca.jpg" class="card-img-top"  height="300">
+                <img src="img/thumb/Thumnail 04 - Café com Soneca.jpg" class="card-img-top"  height="400">
                 <div class="card-body">
                     <h5 class="card-title">Episodio 4 - Café com Soneca</h5>
                     <p class="card-text">O Ministério do Sono adverte: Nenhum soninho foi tirado durante esse EP</p>
-                    <a href="#" class="btn btn-success">Confira aqui</a>
+                    <a href="ep04.html" class="btn btn-success">Confira aqui</a>
                 </div>
               </div>
             </div>
   
             <div class="col">
               <div class="card h-100">
-                <img src="img/thumb/Thumnail 05 - Café com Frio.jpg" class="card-img-top"  height="300">
+                <img src="img/thumb/Thumnail 05 - Café com Frio.jpg" class="card-img-top"  height="400">
                 <div class="card-body">
                     <h5 class="card-title">Episodio 5 - Café com Frio</h5>
                     <p class="card-text">Crítica social sobre a melhor estação do ano por especialistas em meteorologia</p>
-                    <a href="#" class="btn btn-success">Confira aqui</a>
+                    <a href="ep05.html" class="btn btn-success">Confira aqui</a>
                 </div>
               </div>
             </div>
   
             <div class="col">
               <div class="card h-100">
-                <img src="img/thumb/Thumnail 06 - Café com Vida Adulta.jpg" class="card-img-top"  height="300">
+                <img src="img/thumb/Thumnail 06 - Café com Vida Adulta.jpg" class="card-img-top"  height="400">
                 <div class="card-body">
                     <h5 class="card-title">Episodio 6 - Café com Vida Adulta</h5>
                     <p class="card-text">Um papo sobre seu adulto interior por filósofos quânticos ornamentais</p>
-                    <a href="#" class="btn btn-success">Confira aqui</a>
+                    <a href="ep06.html" class="btn btn-success">Confira aqui</a>
                 </div>
               </div>
             </div>
   
             <div class="col">
               <div class="card h-100">
-                <img src="img/thumb/Thumnail 07 - Café com Memória.jpg" class="card-img-top"  height="300">
+                <img src="img/thumb/Thumnail 07 - Café com Memória.jpg" class="card-img-top"  height="400">
                 <div class="card-body">
                     <h5 class="card-title">Episodio 7 - Café com Memória</h5>
                     <p class="card-text">As vezes a gente lembra que precisa postar o episódio novo, as vezes esquecemos. Eu por exemplo esqueci de tirar a roupa do varal dinovo...</p>
-                    <a href="#" class="btn btn-success">Confira aqui</a>
+                    <a href="ep07.html" class="btn btn-success">Confira aqui</a>
                 </div>
               </div>
             </div>
   
             <div class="col">
               <div class="card h-100">
-                <img src="img/thumb/Thumnail 08 - Café com Casa.jpg" class="card-img-top"  height="300">
+                <img src="img/thumb/Thumnail 08 - Café com Casa.jpg" class="card-img-top"  height="400">
                 <div class="card-body">
                     <h5 class="card-title">Episodio 8 - Café com Casa</h5>
                     <p class="card-text">Cadê a policia do aluguel???? Vem conferir com Coruja e Nega</p>
                     <br/>
-                    <a href="#" class="btn btn-success">Confira aqui</a>
+                    <a href="ep08.html" class="btn btn-success">Confira aqui</a>
                 </div>
               </div>
             </div>
@@ -122,9 +123,11 @@
         </div>
         <br/>
       </div>
-      
+    
     </main>
-    <footer  class="footer mt-auto py-4 bg-success fixed-bottom">
+    <br>
+    <br>
+    <footer  class="footer mt-auto py-2 bg-success fixed-bottom">
         <div class="text-center">
             <span class="text-body-dark"><b>© Café com...</b></span>
         </div>
