--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Café com...</title>
+    <link rel="shortcut icon" type="imagex/png" href="img/icon_cafelogo.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   
     <style>
@@ -26,7 +27,7 @@
 
     </header>
     <main>
-      <h2 class="text-center">Bem vindo ao podcast mas cafezado que existe</h2>
+      <h2 class="text-center">Bem vindo ao podcast mais cafezado que existe</h2>
       <div class="container">
         <div class="row">
           <div class="col-sm-3"></div>
@@ -35,9 +36,9 @@
             <div class="collapse" id="redes">
               <div class="card card-body">
                 <div class="d-grid gap-2">
-                  <button type="button" class="btn btn-success">Instagram <img src="img/instag.png" alt="instagram" width="30" height="30"></button>
-                  <button type="button" class="btn btn-success">Youtube <img src="img/youtube.png" alt="instagram" width="30" height="30"></button>
-                  <button type="button" class="btn btn-success">Spotify <img src="img/spotify.png" alt="instagram" width="30" height="30"></button>
+                  <a href="https://www.instagram.com/podcafecom?igsh=MTN1dGxwYzdibXprZg==" role="button" class="btn btn-success">Instagram <img src="img/instag.png" alt="instagram" width="30" height="30"></a>
+                  <a href="#" role="button" class="btn btn-success">Youtube <img src="img/youtube.png" alt="instagram" width="30" height="30"></a>
+                  <a href="https://open.spotify.com/show/48fY67Zqke4FZxjCuWJc3z?si=Jc-pA-vDR9qM_odWYbBGSw" role="button" class="btn btn-success">Spotify <img src="img/spotify.png" alt="instagram" width="30" height="30"></a>
                 </div>
               </div> 
             </div>
@@ -52,11 +53,11 @@
 
           <div class="col-sm-4">
             <div class="card h-100">
-              <img src="img/thumb/Thumnail 08 - Café com Casa.jpg" class="card-img-top"  height="300">
+              <img src="img/thumb/Thumnail 08 - Café com Casa.jpg" class="card-img-top"  height="400">
               <div class="card-body">
                   <h5 class="card-title">Episódio 8 - Café com Casa</h5>
                   <p class="card-text">Cadê a policia do aluguel???? Vem conferir com Coruja e Nega</p>
-                  <a href="#" class="btn btn-success">Confira aqui 
+                  <a href="ep08.html" class="btn btn-success">Confira aqui 
                     <span class="position-absolute top-0 start-50 translate-middle badge rounded-pill bg-danger">
                     NOVO
                     <span class="visually-hidden">unread messages</span>
@@ -68,11 +69,11 @@
         
           <div class="col-sm-4">
             <div class="card h-100">
-              <img src="img/thumb/Thumnail 03 - Café com Salário Mínimo.jpg" class="card-img-top"  height="300">
+              <img src="img/thumb/Thumnail 03 - Café com Salário Mínimo.jpg" class="card-img-top"  height="400">
               <div class="card-body">
                   <h5 class="card-title">Episodio 3 - Café com salário mínimo</h5>
                   <p class="card-text">Vem ver porque o Dom CK vai resolver o problema do salário mínimo no Brasil</p>
-                  <a href="#" class="btn btn-success">Confira aqui
+                  <a href="ep03.html" class="btn btn-success">Confira aqui
                     <span class="position-absolute top-0  start-50  translate-middle badge rounded-pill bg-warning">
                       RECOMENDADO
                       <span class="visually-hidden">unread messages</span>
@@ -84,11 +85,11 @@
 
           <div class="col-sm-4">
             <div class="card h-100">
-              <img src="img/thumb/Thumnail 01 - Café com Café.jpg" class="card-img-top"  height="300">
+              <img src="img/thumb/Thumnail 01 - Café com Café.jpg" class="card-img-top"  height="400">
               <div class="card-body">
                   <h5 class="card-title">Episódio 1 - Café com Café</h5>
                   <p class="card-text">Coruja, Nega e Dom Ck trazendo kilos de desinformação sobre café</p>
-                  <a href="#" class="btn btn-success">Confira aqui
+                  <a href="ep01.html" class="btn btn-success">Confira aqui
                     <span class="position-absolute top-0 start-50 translate-middle badge rounded-pill bg-info">
                       MAIS OUVIDO
                       <span class="visually-hidden">unread messages</span>
@@ -101,7 +102,11 @@
         </div>
       </div>  
     </main>
-    <footer class="footer mt-auto py-4 bg-success fixed-bottom">
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <footer class="footer mt-auto py-2 bg-success fixed-bottom">
       <div class="text-center">
         <span class="text-body-dark"><b>© Café com...</b></span>
       </div>
